
syntax = "proto3";
package icon.lightclient.v1.wasm;

import "gogoproto/gogo.proto";
import "core/02-client/Client.proto";
import "core/23-commitment/commitment.proto";

option go_package = "github.com/cosmos/ibc-go/v5/modules/light-clients/08-wasm;wasm";

// Wasm light client's Client state
message ClientState {
  option (gogoproto.goproto_getters)      = false;
  bytes                     data          = 1;
  bytes                     code_id       = 2;
  icon.proto.core.client.Height latest_height = 3
      [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"latest_height\""];
}

// Wasm light client's ConsensusState
message ConsensusState {
  option (gogoproto.goproto_getters) = false;
  bytes data                         = 1;
  bytes code_id                      = 2;

  // timestamp that corresponds to the block height in which the ConsensusState
  // was stored.
  uint64 timestamp = 3;
  // commitment root
  icon.proto.core.commitment.MerkleRoot root = 4;
} //

// Wasm light client Header
message Header {
  option (gogoproto.goproto_getters) = false;

  bytes                     data   = 1;
  icon.proto.core.client.Height height = 2 [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"height\""];
}

// Wasm light client Misbehaviour
message Misbehaviour {
  option (gogoproto.goproto_getters) = false;

  string client_id = 1 [(gogoproto.moretags) = "yaml:\"client_id\""];
  bytes  data      = 2;
}